Bug 439702 - "Save tags to directory" doesn't do anything
Summary: "Save tags to directory" doesn't do anything
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2021-07-09 22:31 UTC by Tiar
Modified: 2021-07-27 09:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2021-07-09 22:31:41 UTC
SUMMARY
The button was supposed to save/backup tags to the directory but it doesn't do anything yet.
Note: when you implement it, make sure that reading tags from the directory also works (if you export tags, then remove the database, then open Krita, tags should reappear as they were before removing the database).

STEPS TO REPRODUCE
1. Press on it.

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
Tags should be exported into the directory.

SOFTWARE/OS VERSIONS
git hash: 13f04ca236
Comment 1 Halla Rempt 2021-07-27 09:31:07 UTC
Git commit cd77801ba6155ed327b720fe5230f90655352de2 by Halla Rempt.
Committed on 27/07/2021 at 09:30.
Pushed by rempt into branch 'master'.

Implement saving tags to the resources folder

M  +1    -0    libs/brush/KisAbrStorage.cpp
M  +1    -0    libs/image/KisAslStorage.cpp
M  +1    -0    libs/resources/KisBundleStorage.cpp
M  +3    -0    libs/resources/KisFolderStorage.cpp
M  +1    -0    libs/resources/KisMemoryStorage.cpp
M  +7    -5    libs/resources/KisResourceCacheDb.cpp
M  +1    -1    libs/resources/KisResourceCacheDb.h
M  +98   -1    libs/resources/KisResourceLocator.cpp
M  +6    -0    libs/resources/KisResourceLocator.h
M  +2    -0    libs/resources/KisResourceStorage.h
M  +12   -0    libs/resources/KisTag.cpp
M  +4    -0    libs/resources/KisTag.h
M  +1    -1    libs/resources/KisTagModel.cpp
M  +1    -0    libs/resources/sql/create_tags.sql
M  +5    -3    plugins/extensions/resourcemanager/DlgResourceManager.cpp
M  +1    -1    plugins/extensions/resourcemanager/DlgResourceManager.h

https://invent.kde.org/graphics/krita/commit/cd77801ba6155ed327b720fe5230f90655352de2