Implement saving tags to the resources folder

BUG:439702