libs/resources/KisResourceStorage.h
@@ -78,6 +78,8 @@ public:
         virtual QString comment() const = 0;
         /// The resource type as defined in the tag file
         virtual QString resourceType() const = 0;
+        /// The filename of the tag
+        virtual QString filename() const = 0;
 
 
         /// A tag object on which we can set properties and which we can save
